deploy/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: web-cdc-service
spec:
  selector:
    app: web-cdc
  ports:
    - port: 8080
